--- a/Sept2022-A.cabal
+++ b/Sept2022-A.cabal
@@ -25,10 +25,10 @@ executable Sept2022-A
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    other-modules: Syntax, Parser
+    other-modules: Syntax, Parser, Graph, Heap, VM
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    base ^>=4.14.3.0, megaparsec, containers
+    build-depends:    base ^>=4.14.3.0, megaparsec, containers, mtl
     hs-source-dirs:   app, lib
     default-language: Haskell2010
