--- a/Sept2022-A.cabal
+++ b/Sept2022-A.cabal
@@ -25,10 +25,11 @@ executable Sept2022-A
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    other-modules: Syntax, Parser, Compile
+    other-modules: Syntax, Parser, Compile, Heap
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    base ^>=4.14.3.0, megaparsec, containers, mtl
+    build-depends:    base ^>=4.14.3.0, megaparsec, containers, mtl,
+                      directory, filepath
     hs-source-dirs:   app, lib
     default-language: Haskell2010
