--- a/Sept2022-A.cabal
+++ b/Sept2022-A.cabal
@@ -25,7 +25,7 @@ executable Sept2022-A
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    other-modules: Syntax, Parser, Compile, Heap
+    other-modules: Syntax, Parser, Compile, Heap, Eval, Mud
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
