--- a/Sept2022-A.cabal
+++ b/Sept2022-A.cabal
@@ -30,6 +30,6 @@ executable Sept2022-A
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
     build-depends:    base ^>=4.14.3.0, megaparsec, containers, mtl,
-                      directory, filepath
+                      directory, filepath, pretty-simple
     hs-source-dirs:   app, lib
     default-language: Haskell2010
