--- a/Sept2022-A.cabal
+++ b/Sept2022-A.cabal
@@ -21,7 +21,7 @@ maintainer:         evanrinehart@gmail.com
 -- category:
 extra-source-files: CHANGELOG.md
 
-executable Sept2022-A
+executable borax
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
