--- a/Sept2022-A.cabal
+++ b/Sept2022-A.cabal
@@ -25,11 +25,11 @@ executable borax
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    other-modules: PackedString, Heap, Syntax, Parser, Compile, Link, Eval
+    other-modules: PackedString, Heap, Syntax, Parser, Compile, Link, Eval, System
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
     build-depends:    base ^>=4.14.3.0, megaparsec, containers, mtl,
-                      directory, filepath, pretty-simple
+                      directory, filepath, pretty-simple, time
     hs-source-dirs:   app, lib
     default-language: Haskell2010
