--- a/borax.cabal
+++ b/borax.cabal
@@ -1,24 +1,10 @@
 cabal-version:      2.4
-name:               Sept2022-A
+name:               borax
 version:            0.1.0.0
 
--- A short (one-line) description of the package.
--- synopsis:
-
--- A longer description of the package.
--- description:
-
--- A URL where users can report bugs.
--- bug-reports:
-
--- The license under which the package is released.
--- license:
 author:             Evan Rinehart
 maintainer:         evanrinehart@gmail.com
 
--- A copyright notice.
--- copyright:
--- category:
 extra-source-files: CHANGELOG.md
 
 executable borax
