--- a/borax.cabal
+++ b/borax.cabal
@@ -13,11 +13,11 @@ executable borax
     -- Modules included in this executable, other than Main.
     other-modules:
       PackedString, Heap, Syntax, Parser, Compile, Link,
-      Eval, System, Asm
+      Eval, System, Asm, Expr
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
     build-depends:    base ^>=4.14.3.0, megaparsec, containers, mtl,
-                      directory, filepath, pretty-simple, time
+                      directory, filepath, pretty-simple, time, data-fix
     hs-source-dirs:   app, lib
     default-language: Haskell2010
