--- a/borax.cabal
+++ b/borax.cabal
@@ -13,7 +13,7 @@ executable borax
     -- Modules included in this executable, other than Main.
     other-modules:
       PackedString, Heap, Syntax, Parser, Interpret, Prepare, Link,
-      System, Asm, Expr, Compiler
+      System, Asm, Expr, Baby, Doc
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
