--- a/borax.cabal
+++ b/borax.cabal
@@ -7,6 +7,22 @@ maintainer:         evanrinehart@gmail.com
 
 extra-source-files: CHANGELOG.md
 
+library
+    exposed-modules:
+      PackedString, Heap, Syntax, Parser, Interpret, Prepare, Link,
+      System, Asm, Expr, Baby, Doc
+
+    hs-source-dirs: lib
+
+    build-depends:
+      , base ^>=4.14.3.0
+      , megaparsec
+      , containers
+      , mtl
+      , data-fix
+
+    default-language: Haskell2010
+
 executable borax
     main-is:          Main.hs
 
@@ -17,7 +33,15 @@ executable borax
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    base ^>=4.14.3.0, megaparsec, containers, mtl,
-                      directory, filepath, pretty-simple, time, data-fix
+    build-depends:
+      , base ^>=4.14.3.0
+      , megaparsec
+      , containers
+      , mtl
+--      , directory
+--      , filepath
+      , pretty-simple
+      , time
+      , data-fix
     hs-source-dirs:   app, lib
     default-language: Haskell2010
